- General | Resolved an issue where install of required APT packages for certain scripts could fail in the rare case that APT lists are outdated and old packages are not available in the repo anymore. Many thanks to @Paulisper for reporting this issue: https://github.com/MichaIng/DietPi/issues/2996
- DietPi-Login | Resolved an issue during first run setup, where DietPi-Software was called with mostly wrong whiptail menu dimensions. This lead to info prompts and menus being quite small, in particular the "Install" menu entry, that one needs to select, being only visible when navigating to the bottom. Many thanks to @pbecks1963 for reporting this issue: https://github.com/MichaIng/DietPi/issues/3053
- DietPi-NordVPN | Resolved an issue where the server menu could have wrong entries or even fail, if foreign files were placed inside the config directory. Many thanks to @svh1985 for reporting this issue and implementing a fix: https://github.com/MichaIng/DietPi/pull/3047
- DietPi-Run_NTPD | Resolved an issue where changing time sync mode or mirror, from within time sync error prompt, led to a concurrent script execution. Many thanks to @Sopor for reporting this issue: https://github.com/MichaIng/DietPi/issues/3010
- DietPi-Services | Resolved an issue where single service calls failed if their names contain certain special characters, like dots. Many thanks to @maartenlangeveld for reporting this issue: https://github.com/MichaIng/DietPi/issues/3059
- DietPi-Config | Resolved an issue on RPi where I2C baudrate was not applied correctly, thus selection was ineffective. Many thanks to @flashspys for reporting this issue: https://github.com/MichaIng/DietPi/issues/2966
- DietPi-Config | Resolved an issue on RPi where headless mode did not disable all video outputs and framebuffer as intended, since the used config.txt setting has been removed with recent firmware versions.