@@ -2160,6 +2160,22 @@ A backup will be created to "/etc/mympd/mympd.conf.bak_DDMMYYY_N" from where you
 				fi
 				sed -i '/hdmi_ignore_composite/d' /DietPi/config.txt
 
+			# Rock(Pro)64: Apply workaround for kernel-related Ethernet issues: https://github.com/MichaIng/DietPi/issues/3066
+			elif [[ $G_HW_MODEL == 4[23] ]]; then
+
+				local identifier='ff540000'
+				(( $G_HW_MODEL == 43 )) && identifier='fe300000'
+
+				if [[ -f '/boot/boot.cmd' ]] && ! grep -q "$identifier" /boot/boot.cmd; then
+
+					sed -i "/^fdt resize/{s/$/\
+fdt rm /ethernet@$identifier rockchip,bugged_tx_coe\
+fdt rm /ethernet@$identifier snps,force_thresh_dma_mode\
+fdt set /ethernet@$identifier snps,txpbl <0x21>/;q}" /boot/boot.cmd
+					mkimage -C none -A arm -T script -d /boot/boot.cmd /boot/boot.scr
+
+				fi
+
 			fi
 			#-------------------------------------------------------------------------------
 			# Reinstalls and software install changes
