@@ -28,6 +28,7 @@ Changes / Improvements / Optimisations:
 Bug Fixes:
 - General | Removed an obsolete OpenMediaVault cron job and binary that was leftover on at least one of our images (NanoPi NEO2) and is not part of the current OMV packages, thus save to remove in every case. Many thanks to @kt1024 for reporting this issue: https://github.com/MichaIng/DietPi/issues/2994
 - General | Resolved an issue where install of required APT packages for certain scripts could fail in the rare case that APT lists are outdated and old packages are not available in the repo anymore. Many thanks to @Paulisper for reporting this issue: https://github.com/MichaIng/DietPi/issues/2996
+- Rock64/RockPro64 | Resolved an issue where DietPi could not obtain the active network adapter and IP, if onboard Ethernet was used. This is because of a kernel-related bug, which seems to cause Ethernet connection instabilities as well in cases. A workaround is applied to all new Rock(Pro)64 images and via DietPi-Update. Many thanks to @svh1985 for reporting this issue, as well as searching and testing the workaround: https://github.com/MichaIng/DietPi/issues/3066
 - DietPi-Login | Resolved an issue during first run setup, where DietPi-Software was called with mostly wrong whiptail menu dimensions. This lead to info prompts and menus being quite small, in particular the "Install" menu entry, that one needs to select, being only visible when navigating to the bottom. Many thanks to @pbecks1963 for reporting this issue: https://github.com/MichaIng/DietPi/issues/3053
 - DietPi-NordVPN | Resolved an issue where the server menu could have wrong entries or even fail, if foreign files were placed inside the config directory. Many thanks to @svh1985 for reporting this issue and implementing a fix: https://github.com/MichaIng/DietPi/pull/3047
 - DietPi-Run_NTPD | Resolved an issue where changing time sync mode or mirror, from within time sync error prompt, led to a concurrent script execution. Many thanks to @Sopor for reporting this issue: https://github.com/MichaIng/DietPi/issues/3010
